--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
       <div class="container">
         <a
           class="header__logo"
-          href="https://seriserj.github.io/goit-markup-hw-04/"
+          href="https://seriserj.github.io/goit-markup-hw-05/"
           ><p class="p__logo"><span class="span__logo">Web</span>Studio</p></a
         >
         <nav class="header__navigation">
@@ -60,53 +60,77 @@
       </section>
       <section class="portfolio-img">
         <div class="container">
-          <div class="box">
-            <div class="container__portfolio">
+          <div class="container__portfolio">
+            <div class="box">
+              <div class="overlay"></div>
               <img src="images/i1.jpg" alt="laptop" width="370" />
               <h6 class="h6">Technoduck</h6>
               <p class="team">Web-site</p>
-              <div class="overlay"></div>
             </div>
           </div>
           <div class="container__portfolio">
-            <img src="images/i2.jpg" alt="poster" width="370" />
-            <h6 class="h6">Poster New Orlean vs Golden Star</h6>
-            <p class="team">Design</p>
+            <div class="box">
+              <div class="overlay"></div>
+              <img src="images/i2.jpg" alt="poster" width="370" />
+              <h6 class="h6">Poster New Orlean vs Golden Star</h6>
+              <p class="team">Design</p>
+            </div>
           </div>
           <div class="container__portfolio">
-            <img src="images/i3.jpg" alt="logo seafood" width="370" />
-            <h6 class="h6">Seafood Restaurant</h6>
-            <p class="team">Apps</p>
+            <div class="box">
+              <div class="overlay"></div>
+              <img src="images/i3.jpg" alt="logo seafood" width="370" />
+              <h6 class="h6">Seafood Restaurant</h6>
+              <p class="team">Apps</p>
+            </div>
           </div>
           <div class="container__portfolio">
-            <img src="images/i4.jpg" alt="headphones" width="370" />
-            <h6 class="h6">Project Prime</h6>
-            <p class="team">Marketing</p>
+            <div class="box">
+              <div class="overlay"></div>
+              <img src="images/i4.jpg" alt="headphones" width="370" />
+              <h6 class="h6">Project Prime</h6>
+              <p class="team">Marketing</p>
+            </div>
           </div>
           <div class="container__portfolio">
-            <img src="images/i5.jpg" alt="boxes" width="370" />
-            <h6 class="h6">Project Boxes</h6>
-            <p class="team">Apps</p>
+            <div class="box">
+              <div class="overlay"></div>
+              <img src="images/i5.jpg" alt="boxes" width="370" />
+              <h6 class="h6">Project Boxes</h6>
+              <p class="team">Apps</p>
+            </div>
           </div>
           <div class="container__portfolio">
-            <img src="images/i6.jpg" alt="pc monitor" width="370" />
-            <h6 class="h6">Inspiration has no Borders</h6>
-            <p class="team">Web-site</p>
+            <div class="box">
+              <div class="overlay"></div>
+              <img src="images/i6.jpg" alt="pc monitor" width="370" />
+              <h6 class="h6">Inspiration has no Borders</h6>
+              <p class="team">Web-site</p>
+            </div>
           </div>
           <div class="container__portfolio">
-            <img src="images/i7.jpg" alt="book" width="370" />
-            <h6 class="h6">Limited Edition</h6>
-            <p class="team">Design</p>
+            <div class="box">
+              <div class="overlay"></div>
+              <img src="images/i7.jpg" alt="book" width="370" />
+              <h6 class="h6">Limited Edition</h6>
+              <p class="team">Design</p>
+            </div>
           </div>
           <div class="container__portfolio">
-            <img src="images/i8.jpg" alt="label" width="370" />
-            <h6 class="h6">Project LAB</h6>
-            <p class="team">Marketing</p>
+            <div class="box">
+              <div class="overlay"></div>
+              <img src="images/i8.jpg" alt="label" width="370" />
+              <h6 class="h6">Project LAB</h6>
+              <p class="team">Marketing</p>
+            </div>
           </div>
           <div class="container__portfolio">
-            <img src="images/i9.jpg" alt="laptop" width="370" />
-            <h6 class="h6">Growing Business</h6>
-            <p class="team">Apps</p>
+            <div class="box">
+              <div class="overlay"></div>
+              <img src="images/i9.jpg" alt="laptop" width="370" />
+              <h6 class="h6">Growing Business</h6>
+              <p class="team">Apps</p>
+            </div>
           </div>
         </div>
       </section>
@@ -120,7 +144,7 @@
           >
           <p class="footer-addres__addres">695 Park Ave, NY 10065, USA</p>
 
-          <a href="https://seriserj.github.io/goit-markup-hw-04/"
+          <a href="https://seriserj.github.io/goit-markup-hw-05/"
             ><p><span>info@devstudio.com</span></p></a
           >
           <a href="tel:+1212-772-4150">+1212-772-4150</a>
